(This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)

2.6

  * Document requester (F4) opens with cursor on the current document.
    Docs with unsaved changes are bold, flagged with "*".

2.5

  * New DelTabs flag, function separated from Tabs flag.

  * Reformatting with the Paragraph command is now aware of common
    leading characters used in comments: > # / * and spaces.

  * WordWrap preserves leading characters identically to Paragraph.

2.4

  * New Shift command indents/outdents selected lines.

  * Recorded macros preserve comments; indicate other included macros.

  * New AtomicUndo command groups changes to be undone/redone as a group
    instead of individually.

  * For commands that have key bindings, Help displays them.

  * New syntax highlighting for texinfo files.
  
2.3

  * Takes 'SEQ "sequence" KEYCODE' in ~/.ne/.keys to bind character
    sequences to key codes.

2.2

  * Now ne is distributed under the GPLv3.

  * Added AutoMatchBracket mode to indicate visible matching of
    {}, (), [], <> pairs. Mode is 1 (brightness) by default.

  * Bookmarks now remember/restore their vertical offsets in the window.

  * Bookmark commands take -1/+1 to cycle through your bookmarks;
    Use "UnsetBookmark *" to unset all bookmarks.

  * New --binary command line option loads next listed file in binary mode.
    May appear multiple times on the command line.

  * +[N[,M]] command line option moves to N-th line, M-th column of next file loaded.
    May appear multiple times on the command line.

  * Mention http://groups.google.com/group/niceeditor in splash screen.

  * About now displays splash screen in addition to its status bar message.

  * In FastGUI mode, when highlighting menu items the cursor is now
    positioned on the border of the menu rather than on the first letter
    of menu items.

  * New "tabs" syntax definition makes tabs visibly distinct from spaces.
