@@ -174,11 +174,11 @@ static void init_history(void) {
 			
 			move_to_bof(history_buff);
 			if (history_buff->cur_line_desc->line && history_buff->cur_line_desc->line_len) {
-				insert_stream(	history_buff,
-									history_buff->cur_line_desc,
-									history_buff->cur_line,
-									history_buff->cur_line_desc->line_len,
-									"", 1);
+				insert_stream(history_buff,
+				              history_buff->cur_line_desc,
+				              history_buff->cur_line,
+				              history_buff->cur_line_desc->line_len,
+				              "", 1);
 			}
 		}
 	}
@@ -212,48 +212,48 @@ static void add_to_history(const unsigned char * const str) {
 	   at the end. */
 
 	insert_stream(history_buff,
-						history_buff->cur_line_desc,
-						history_buff->cur_line,
-						history_buff->cur_line_desc->line_len,
-						str,
-						strlen(str) + 1);
+	              history_buff->cur_line_desc,
+	              history_buff->cur_line,
+	              history_buff->cur_line_desc->line_len,
+	              str,
+	              strlen(str) + 1);
 	assert_buffer(history_buff);
 }
 
 /* request() is the main function that serves request_number() and
-	request_string(). Given a prompt, a default string and a boolean flag which
-	establish the possibility of any alphabetical input (as opposed to digits
-	only), the user can edit a string of at most MAX_INPUT_LINE_LEN characters.
-	Many useful commands can be used here. The string edited by the user is
-	returned, or NULL if the input was escaped, or the empty string was entered.
-	Note that presently this function always returns a pointer to a static
-	buffer, but this could change in the future.
+   request_string(). Given a prompt, a default string and a boolean flag which
+   establish the possibility of any alphabetical input (as opposed to digits
+   only), the user can edit a string of at most MAX_INPUT_LINE_LEN characters.
+   Many useful commands can be used here. The string edited by the user is
+   returned, or NULL if the input was escaped, or the empty string was entered.
+   Note that presently this function always returns a pointer to a static
+   buffer, but this could change in the future.
 
-	completion_allowed has several possible values:
-	 0 means no completion,
-	 1 complete as a filename,
-	 2 complete as a command followed by a filename,
-	 3 complete as a recognized syntax name.
+   completion_allowed has several possible values:
+    0 COMPLETE_NONE   means no completion,
+    1 COMPLETE_FILE   complete as a filename,
+    2                 complete as a command followed by a filename, (not implemented?)
+    3 COMPLETE_SYNTAX complete as a recognized syntax name.
 
-	If prefer_utf8 is true, editing an ASCII line inserting an ISO-8859-1 character
-	will turn it into an UTF-8 line.
-	
-	request() relies on a number of auxiliary functions and static data. As
-	always, we would really need nested functions, but, alas, C can't cope with
-	them. */
+   If prefer_utf8 is true, editing an ASCII line inserting an ISO-8859-1 character
+   will turn it into an UTF-8 line.
+   
+   request() relies on a number of auxiliary functions and static data. As
+   always, we would really need nested functions, but, alas, C can't cope with
+   them. */
 
 static unsigned char input_buffer[MAX_INPUT_LINE_LEN + 1];
 
 /* The current encoding of the command line. Contrarily to buffers, the command line may (and will) move
-	back to ASCII if all non-US-ASCII characters are deleted .*/
+   back to ASCII if all non-US-ASCII characters are deleted .*/
 
 static encoding_type encoding;
 
 /* start_x  is the first usable x position for editing;
-	len      is the current raw length of the input buffer (input_buffer[len] is always a NULL);
-	x        is the x position of the cursor;
-	pos      is the position of the cursor inside the input buffer;
-	offset   is the first displayed buffer character. 
+   len      is the current raw length of the input buffer (input_buffer[len] is always a NULL);
+   x        is the x position of the cursor;
+   pos      is the position of the cursor inside the input buffer;
+   offset   is the first displayed buffer character. 
 */
 
 static int start_x, len, pos, x, offset;
@@ -521,7 +521,7 @@ char *request(const char *prompt, const char * const default_string, const int a
 
 
 		case TAB:
-			if (completion_allowed == COMPLETE_FILE) {
+			if (completion_allowed == COMPLETE_FILE || completion_allowed == COMPLETE_SYNTAX) {
 				quoted = FALSE;
 				if (len && input_buffer[len - 1] == '"') {
 					input_buffer[len - 1] = 0;
@@ -538,8 +538,11 @@ char *request(const char *prompt, const char * const default_string, const int a
 					else prefix = input_buffer;
 				}
 
-				if (last_char_completion) {
-					completion = p = request_files(prefix, TRUE);
+				if (last_char_completion || completion_allowed == COMPLETE_SYNTAX) {
+					if (completion_allowed == COMPLETE_FILE )
+						completion = p = request_files(prefix, TRUE);
+					else
+						completion = p = request_syntax(prefix, TRUE);
 					reset_window();
 					if (completion) {
 						if (*completion) selection = TRUE;
@@ -547,7 +550,10 @@ char *request(const char *prompt, const char * const default_string, const int a
 					}
 				}
 				else {
-					completion = p = complete(prefix);
+					if (completion_allowed == COMPLETE_FILE )
+						completion = p = complete_filename(prefix);
+					else
+						completion = p = request_syntax(prefix, TRUE);
 					last_char_completion = TRUE;
 					if (!completion) alert();
 				}
@@ -572,7 +578,6 @@ char *request(const char *prompt, const char * const default_string, const int a
 				free(p);
 			}
 			break;
-					
 
 		case COMMAND:
 			if (c < 0) c = -c - 1;
@@ -600,18 +605,18 @@ char *request(const char *prompt, const char * const default_string, const int a
 						}
 
 						/* In some cases, the default displayed on the command line will be the same as the 
-							first history item. In that case we skip it. */
+						   first history item. In that case we skip it. */
 
 						if (first_char_typed == TRUE 
-							 && a == LINEUP_A 
-							 && history_buff->cur_line_desc->line 
-							 && !strncmp(history_buff->cur_line_desc->line, input_buffer, history_buff->cur_line_desc->line_len))
+						    && a == LINEUP_A 
+						    && history_buff->cur_line_desc->line 
+						    && !strncmp(history_buff->cur_line_desc->line, input_buffer, history_buff->cur_line_desc->line_len))
 							line_up(history_buff);
 						
 						if (history_buff->cur_line_desc->line) {
 							strncpy(input_buffer,
-									  history_buff->cur_line_desc->line,
-									  min(history_buff->cur_line_desc->line_len,MAX_INPUT_LINE_LEN));
+							        history_buff->cur_line_desc->line,
+							        min(history_buff->cur_line_desc->line_len,MAX_INPUT_LINE_LEN));
 							input_buffer[min(history_buff->cur_line_desc->line_len,MAX_INPUT_LINE_LEN)] = 0;
 							len    = strlen(input_buffer);
 							encoding = detect_encoding(input_buffer, len);
@@ -620,7 +625,7 @@ char *request(const char *prompt, const char * const default_string, const int a
 							input_buffer[len = 0] = 0;
 							encoding = ENC_ASCII;
 						}
-						
+
 						x      = start_x;
 						pos    = 0;
 						offset = 0;
